add partner donation claiming endpoints
